--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  width: 100%;
+  margin: 0;
+  background-image: url("https://res.cloudinary.com/dz8on44po/image/upload/v1650420867/R2S2/bg-stars_sbfehh.svg");
+  background-repeat: no-repeat;
+  background-color: hsl(235, 16%, 14%);
+  color: hsl(0, 0%, 100%);
+  font-family: 'Red Hat Text', sans-serif;
+  font-size: 14px;
 }
